--- a/src/pages/Styles.css
+++ b/src/pages/Styles.css
@@ -19,8 +19,8 @@
   display: inline-block;
   width: 100%;
   max-width: 600px; /* Maximum width of the container */
- 
-  margin-right: 30vh;
+ margin-left: -2vw;
+  margin-right: 30vw;
 }
 
 .background-image {
@@ -33,13 +33,13 @@
 }
 .circle-video-wrapper {
   position: absolute;
-  top: 50%;
+  top: 42%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50vw; /* Responsive width: 50% of the viewport width */
-  height: 50vw; /* Responsive height: 50% of the viewport width */
-  max-width: 300px; /* Maximum width of the circle */
-  max-height: 300px; /* Maximum height of the circle */
+  width: 74%; /* Responsive width: 50% of the viewport width */
+  height: 78%; /* Responsive height: 50% of the viewport width */
+  max-width: 100vw; /* Maximum width of the circle */
+  max-height: 100vw; /* Maximum height of the circle */
   overflow: hidden;
   border-radius: 50%;
   display: flex;
@@ -70,15 +70,24 @@
 }
 /* Styles for screens larger than 900px */
 @media (min-width: 900px) {
-
+  .circle-video-wrapper {
+    top: 52%;
+    left: 51%;
+    }
 }
 /* Styles for screens larger than 1100px */
 @media (min-width: 1100px) {
+
+   
   /* Add styles specific to screens larger than 1100px if needed */
 }
 
 /* Styles for screens larger than 1400px */
 @media (min-width: 1400px) {
+  .circle-video-wrapper {
+    max-width: 30vw; /* Maximum width of the circle */
+  max-height: 30vw; /* Maximum height of the circle */
+    }
   /* Add styles specific to screens larger than 1400px if needed */
 }
 
