--- a/src/pages/Styles.css
+++ b/src/pages/Styles.css
@@ -66,7 +66,11 @@
 @media (min-width: 700px) {
   .responsive-img {
     content: url('../Assets/backgroundM.png'); 
-    height: 80vh; /* Adjust this if needed for larger screens */
+     /* Adjust this if needed for larger screens */
+    width: 100%;           /* Make the image full width */
+    height: auto;          /* Ensure the height adjusts automatically to maintain the aspect ratio */
+    object-fit: cover;     /* Ensure the image covers the container without stretching */
+    max-height: 100vh;     /* Limit the height to the viewport height */
   }
 }
 /* Styles for screens larger than 900px */
@@ -95,5 +99,179 @@
 
 
 
+/* /////////////////// wheel css /////////////// */
+.wheel-text {
+  transform: rotate(-225deg); /* Rotate text back to upright */
+  transform-origin: center; /* Adjust origin to center of text */
+}
+
+.dashboard {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  background-color: #f9f9f9;
+}
+
+.games {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.game-card {
+  width: 200px;
+  padding: 15px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
+}
+
+.game-card:hover {
+  transform: scale(1.05);
+}
+
+.add-game-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  padding: 15px;
+  background-color: #CFE7D5; /* Paper-like color */
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
+}
+
+.add-game-card:hover {
+  transform: scale(1.05);
+}
+
+.add-game-card button {
+  background-color: #3B5D44;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.add-game-card button:hover {
+  background-color: #2d4934;
+}
+#spin,
+#reset {
+position: relative;
+}
+
+#spin:hover {
+color: rgb(0, 180, 120);
+border-color: rgb(0, 180, 120);
+}
+
+#spin:focus,
+#reset:focus {
+outline: none;
+}
+
+/* #reset {
+position: absolute;
+bottom: 20vh;
+right: 35vw;
+} */
+
+#reset:hover {
+color: red;
+border-color: red;
+}
+
+#readout {
+position: absolute;
+bottom: 7vh;
+left: 35vw;
+}
+
+#selector {
+position: absolute;
+top: 43.4%;
+left: 0%;
+z-index: 3;
+transform: rotate(0deg);
+}
+
+#result {
+font-size: 50px;
+color: rgb(0, 180, 120);
+}
+
+input {
+font-size: 16px;
+border: none;
+border-bottom: 1px solid black;
+}
 
 
+
+
+@media (max-width: 900px) {
+.wheel-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.question-container {
+  display: none;
+}
+
+.selected-question-container.show {
+  display: block;
+}
+}
+
+
+
+
+/* ///////////////////zoom page css ///////////// */
+
+.zoom-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh; /* Full height */
+}
+
+.background-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: auto;
+  min-height: 100%; /* Ensures it covers the entire area */
+  min-width: 100%; /* Ensures it covers the entire area */
+  transform: translate(-50%, -50%);
+  object-fit: cover; /* Cover the container */
+  transition: transform 2s ease; /* Duration of the zoom effect */
+}
+
+.zoom-in {
+  transform: scale(2); /* Zoom effect */
+}
+
+.game-container {
+  position: relative;
+  opacity: 0; /* Initially hidden */
+  transition: opacity 1s ease; /* Fade in effect */
+}
+
+.game-container.visible {
+  opacity: 1; /* Fade in after zoom */
+}
