--- a/src/pages/Styles.css
+++ b/src/pages/Styles.css
@@ -88,13 +88,30 @@
   display: none;
 }
 
+
 /* CSS for the side images' movement and fade out */
 .side-image.animate {
   transform: translate(0, 100vh) scale(1.2); /* Move down and zoom in */
   opacity: 0; /* Fade out */
   transition: transform 2s ease-in, opacity 2s ease-in;
 }
+.side-image-boat {
+  bottom:0%;
+  right: 0%;
+  position: absolute;
+  width: 30vw;
+  height: auto;
+  
 
+  transition: transform 2s, opacity 2s;
+}
+.side-image-boat.animateLeft {
+
+  transform: translateX(-100vw); /* Move to the left and zoom in */
+  transform-origin: center; /* Keep scaling from the center */
+  opacity: 0; /* Fade out */
+  transition: transform 1s ease-in, opacity 1s ease-in;
+}
 /* CSS for the wheel to zoom in and fade into view */
 .game-container.show {
   opacity: 1; /* Make it visible */
