--- a/src/pages/Styles.css
+++ b/src/pages/Styles.css
@@ -126,7 +126,24 @@
   transform: rotate(90deg) translateY(-100%);
   transform-origin:top left;
 }
-
+.FSMB{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vh;
+  height: 100vw;
+  overflow: hidden;
+  transform: rotate(90deg) translateY(-100%);
+  transform-origin: top left;
+ 
+  
+}
+.content {
+  
+  transform-origin: top left;
+  width: 100%;
+  height: 100%;
+}
 .FSbg {
   
   height: 100vw;
