--- a/src/pages/Styles.css
+++ b/src/pages/Styles.css
@@ -130,10 +130,10 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vh;
-  height: 100vw;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
-  transform: rotate(90deg) translateY(-100%);
+
   transform-origin: top left;
  
   
