--- a/src/pages/Styles.css
+++ b/src/pages/Styles.css
@@ -126,6 +126,13 @@
   transform: rotate(90deg) translateY(-100%);
   transform-origin:top left;
 }
+.normalDT{
+  padding: 24px; 
+  position: relative;
+  max-height: 80%;
+  max-width: 80%;
+  margin: 20px auto;
+}
 .FSMB{
   position: fixed;
   top: 0;
@@ -133,7 +140,6 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-
   transform-origin: top left;
  
   
